--- a/WhatIfBudget/WhatIfBudget.API/appsettings.json
+++ b/WhatIfBudget/WhatIfBudget.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CORS": {
+    "allowed": [ "https://localhost:4200", "https://localhost:7033" ]
+  },
   "AllowedHosts": "*"
 }
