--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/package.json
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@azure/msal-angular": "^2.5.2",
+    "@azure/msal-browser": "^2.32.2",
+    "primeicons": "^6.0.1",
+    "primeng": "^14.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
