#10 #65 #31 #61 setup initial Income model incl. all needed models, classes, interfaces.

--- a/WhatIfBudget/WhatIfBudget.Logic/WhatIfBudget.Logic.csproj
+++ b/WhatIfBudget/WhatIfBudget.Logic/WhatIfBudget.Logic.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WhatIfBudget.Data\WhatIfBudget.Data.csproj" />
+    <ProjectReference Include="..\WhatIfBudget.Services\WhatIfBudget.Services.csproj" />
+  </ItemGroup>
+
 </Project>
