--- a/WhatIfBudget/WhatIfBudget.API/WhatIfBudget.API.csproj
+++ b/WhatIfBudget/WhatIfBudget.API/WhatIfBudget.API.csproj
@@ -8,14 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Identity.Web" Version="1.25.10" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WhatIfBudget.Data\WhatIfBudget.Data.csproj" />
+    <ProjectReference Include="..\WhatIfBudget.Logic\WhatIfBudget.Logic.csproj" />
+    <ProjectReference Include="..\WhatIfBudget.Services\WhatIfBudget.Services.csproj" />
   </ItemGroup>
 
 </Project>
