--- a/WhatIfBudget/WhatIfBudget.Services/WhatIfBudget.Services.csproj
+++ b/WhatIfBudget/WhatIfBudget.Services/WhatIfBudget.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WhatIfBudget.Data\WhatIfBudget.Data.csproj" />
+  </ItemGroup>
+
 </Project>
