ignore angular in C# builds

--- a/WhatIfBudget/WhatIfBudget.App/WhatIfBudget.App.csproj
+++ b/WhatIfBudget/WhatIfBudget.App/WhatIfBudget.App.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="ClientApp\**" Exclude="ClientApp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.13" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.9.5">
       <PrivateAssets>all</PrivateAssets>
